# dev-salary-prediction-model

./: .gitignore  README.md  pyproject.toml
models/: catboost-salary-prediction-1.cbm
notebooks/: attributes-engineering.ipynb  training.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
